Fix overflow of welcome/help text on mobile.

--- a/feedhq/feeds/static/feeds/css/partials/_320.scss
+++ b/feedhq/feeds/static/feeds/css/partials/_320.scss
@@ -149,6 +149,7 @@
 		}
 	}
 
+	.help,
 	#entry {
 		width: 100%;
 		padding: 0;
